RESOLVED FIXED243911
ReadableStream should fail at read-loop if non Uint8Array is enqueued
https://bugs.webkit.org/show_bug.cgi?id=243911
Summary ReadableStream should fail at read-loop if non Uint8Array is enqueued
Yusuke Suzuki
Reported 2022-08-12 17:57:58 PDT
https://streams.spec.whatwg.org/#read-loop > If chunk is not a Uint8Array object, reject promise with a TypeError and abort these steps. This is tested in WPT wasm/webapi/wasm_stream_compile_test.html, and currently failing because we are not rejecting non Uint8Array buffer. https://wpt.fyi/results/wasm/webapi/wasm_stream_compile_test.html?label=experimental&label=master&aligned
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-12 17:58:51 PDT
youenn fablet
Comment 2 2022-08-26 00:37:32 PDT
EWS
Comment 3 2022-08-29 12:14:44 PDT
Committed 253918@main (afdd4c9f10bd): <https://commits.webkit.org/253918@main> Reviewed commits have been landed. Closing PR #3695 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.