ReadableStream should fail at read-loop if non Uint8Array is enqueued https://bugs.webkit.org/show_bug.cgi?id=243911 rdar://problem/98595437

Reviewed by Yusuke Suzuki.

Update WebIDL to require Uint8Array when enqueuing chunks.
This will trigger pipeTo to fail in case none Uint8Array chunks are enqueued.

Covered by rebased tests.
Removing obsolete LayoutTests/imported/w3c/web-platform-tests/wasm/wasm_stream_compile_test.html and LayoutTests/imported/w3c/web-platform-tests/wasm/wasm_stream_instantiate_test.html
which are not in WPT upstream and are probably replaced by wasm/webapi counterparts.
Updated LayoutTests/http/tests/workers/service/resources/service-worker-fetch-worker.js to pass a Uint8Array and not an ArrayBuffer directly.

* LayoutTests/http/tests/workers/service/resources/service-worker-fetch-worker.js:
(stringToBuffer):
* LayoutTests/imported/w3c/web-platform-tests/wasm/wasm_stream_compile_test-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/wasm/wasm_stream_compile_test.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/wasm/wasm_stream_instantiate_test-expected.txt: Removed.
* LayoutTests/imported/w3c/web-platform-tests/wasm/wasm_stream_instantiate_test.html: Removed.
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/wasm_stream_instantiate_test-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/wasm/webapi/wasm_stream_compile_test-expected.txt:
* Source/WebCore/Modules/streams/ReadableStreamSink.cpp:
(WebCore::ReadableStreamToSharedBufferSink::enqueue):
* Source/WebCore/Modules/streams/ReadableStreamSink.h:
* Source/WebCore/Modules/streams/ReadableStreamSink.idl:

Canonical link: https://commits.webkit.org/253918@main